language/tests/error/TypeError01.hashem
bebin main() {
  3 - "4";  
}  
